# soxai_data

./: .gitignore  .gitingore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml  release.yml
soxai_data/: get_ave_data.py  soxai_data.py
soxai_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: main.py
tests/: test_get_ave_data.py  test_soxai_data.py
