[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soxai_data"
version = "0.0.3"
dependencies = [
  "httpx",
  "pandas",
]
requires-python = ">=3.8"
authors = [
  {name = "SOXAI Inc.", email = "dev@soxai.co.jp"}
]
maintainers = [
 {name = "SOXAI Inc.", email = "dev@soxai.co.jp"}
]
description = "SOXAI Data Science Library"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["soxai_data", "soxai-data", "soxai", "data", "science"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://soxai.co.jp"
Documentation = "https://soxai.co.jp/docs"
Repository = "https://github.com/soxaidev/soxai_data"
"Bug Tracker" = "https://github.com/soxaidev/soxai_data/issues"
Changelog = "https://github.com/soxaidev/soxai_data/blob/master/CHANGELOG.md"
